; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/scripts/extr_cmapcleanz.c_pc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/scripts/extr_cmapcleanz.c_pc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"<%02x>\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"<%04x>\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"<%06x>\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"<%08x>\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pc(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ule i32 %3, 255
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %6)
  br label %25

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = icmp ule i32 %9, 65535
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  br label %24

14:                                               ; preds = %8
  %15 = load i32, i32* %2, align 4
  %16 = icmp ule i32 %15, 16777215
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 %18)
  br label %23

20:                                               ; preds = %14
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %20, %17
  br label %24

24:                                               ; preds = %23, %11
  br label %25

25:                                               ; preds = %24, %5
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
